tests/lean/1682.lean
example : (p → q) ∧ r := by
  refine ⟨?a, ?b⟩

example : (p → q) ∧ r := by
  refine ⟨fun h => ?a, ?b⟩
